# t3-webview-ui

./: .gitignore  package-lock.json  package.json
api/: Cargo.toml
api/src/: server.rs
doc/: daily.md
doc/wt/: 2024-10 (21-27).xlsx  Details.xlsx  wt.txt
src/components/: CanvasType.vue  DeviceInfo.vue  NewTopToolBar.vue  ObjectConfig.vue  ObjectType.vue  ToolsSidebar.vue  TopToolbar.vue  WeldType.vue
src/components/ObjectTypes/: Value.vue
src/lib/: common.js
src/lib/T3000/Hvac/: Hvac.ts
src/lib/T3000/Hvac/Data/: ConstantData.ts  DataOpt.ts  MockData.ts  T3Data.ts
src/lib/T3000/Hvac/Data/Instance/: Basic.ts  Instance.ts  Shape.ts
src/lib/T3000/Hvac/Data/State/: BaseStateManager.ts  ObjectStore.ts  ObjectStoreFactory.ts  State.ts  StateBase.ts  StateManager.ts  StoredObject.ts
src/lib/T3000/Hvac/Helper/: T3DataStream.ts  T3Utils.ts  Utils1.ts  Utils3.ts  Utils5.ts
src/lib/T3000/Hvac/Model/: CRect.ts  ContentHeader.ts  FillData.ts  FontRecord.ts  GlobalMsgModel.ts  Hook.ts  Layer.ts  LayersManager.ts  LibList.ts  LineData.ts  OutsideEffectData.ts  PaintData.ts  PathPoint.ts  PolyList.ts  PolySeg.ts  QuickStyle.ts  Rectangle.ts  RightClickData.ts  RulerSettings.ts  SEDAHook.ts  SEDArray.ts  SEDDefault.ts  SEDGraphDefault.ts  SEDSession.ts  SelectionAttributes.ts  StepRect.ts  TEDSession.ts  TextFormatData.ts  TextObject.ts
src/lib/T3000/Hvac/Opt/: IdxPage.ts  IdxUtils.ts  MessageOpt.ts
src/lib/T3000/Hvac/Opt/Socket/: DeviceItem.ts  DeviceOpt.ts  MessageModel.ts  MessageType.ts  (+2 more)
src/pages/HvacDrawer/: IndexPage.vue  IndexPage2.vue  IndexPage3.vue
(+1 files in other folders)
