[package]
name = "t3_webview_api"
version = "0.8.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "t3_webview_api"
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.7.7", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
futures = "0.3"
futures-util = "0.3"

tracing-subscriber = "0.3.18"
strum_macros = "0.26.1"
serde_with = "3.11.0"
tower-http = { version = "0.6.1", features = ["cors", "fs"] }
dotenvy = "0.15.7"
lazy_static = "1.4.0"
open = "5.1.2"
chrono = "0.4.37"
mime_guess = "2.0.4"

migration = { path = "migration" }

[dependencies.sea-orm]
version = "1.0.0"
features = [
  "runtime-tokio",
  # "sqlx-postgres",
  # "sqlx-mysql",
  "sqlx-sqlite",
]

[dev-dependencies]
tower = { version = "0.5.1", features = ["util"] }

[dependencies.uuid]
version="1.6.1"
features=[
  "v4",
  "fast-rng",
  "macro-diagnostics"
]

[profile.release]
strip = true
opt-level = "z"
lto = true
